src/test/ui/rust-2018/issue-54400-unused-extern-crate-attr-span.stderr
error: unused extern crate
  --> $DIR/issue-54400-unused-extern-crate-attr-span.rs:12:1
   |
LL | / #[cfg(blandiloquence)]
LL | | extern crate edition_lint_paths;
   | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
   | |________________________________|
   |                                  help: remove it
   |
note: lint level defined here
  --> $DIR/issue-54400-unused-extern-crate-attr-span.rs:6:9
   |
LL | #![deny(rust_2018_idioms)]
   |         ^^^^^^^^^^^^^^^^
   = note: #[deny(unused_extern_crates)] implied by #[deny(rust_2018_idioms)]

error: aborting due to previous error

